added events for ddd

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Common\Models\" />
     <Folder Include="Routes\Commands\" />
   </ItemGroup>
 
