--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;port=5432;user id =postgres;password=1a2s3d4f;database=MyMoonDb; pooling=false"
+  },
+  "ApplicationSettings": {
+    "LogDb": false
   }
 }
