--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;port=5432;user id =postgres;password=123321321;database=MyMoonDb; pooling=false"
+    //"DefaultConnection": "Server=localhost;port=5432;user id =postgres;password=123321321;database=MyMoonDb; pooling=false",
+    "DefaultConnection": "Server=localhost;port=5432;user id =postgres;password=1a2s3d4f;database=MyMoonDb; pooling=false"
   },
   "ApplicationSettings": {
     "LogDb": false
