--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -27,13 +27,19 @@
     <Compile Remove="Persistence\Migrations\20200820190639_InitialCreate.Designer.cs" />
     <Compile Remove="Persistence\Migrations\20200820190807_InitialCreate.cs" />
     <Compile Remove="Persistence\Migrations\20200820190807_InitialCreate.Designer.cs" />
+    <Compile Remove="Persistence\Migrations\20200820191005_InitialCreate.cs" />
+    <Compile Remove="Persistence\Migrations\20200820191005_InitialCreate.Designer.cs" />
+    <Compile Remove="Persistence\Migrations\20200825215319_InitialCreate.cs" />
+    <Compile Remove="Persistence\Migrations\20200825215319_InitialCreate.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Identity\" />
+    <Folder Include="Persistence\Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.7" />
     <PackageReference Include="microsoft.Extensions.Logging.Console" Version="3.1.7" />
     <PackageReference Include="Npgsql" Version="4.1.4" />
