--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
+    "axios": "^0.20.0",
     "date-fns": "^2.15.0",
     "formik": "^2.1.5",
     "next": "9.4.4",
